src/objects/SPE_SpendandVolume__c.object
<CustomObject>
    <fields>
        <fullName>AggregateLevel__c</fullName>
        <label>AggregateLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregationatribute__c</fullName>
        <label>Aggregation_atribute</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsManullyUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manully Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEPeriod__c</fullName>
        <label>SPE Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend__c</fullName>
        <label>Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <label>Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Spend_and_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volumn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Weightage Intermediate</label>
    <nameField>
        <displayFormat>SVId-{00000}</displayFormat>
        <label>SVId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weightage Intermediates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>